Add inline aside to readme

--- a/README
+++ b/README
@@ -16,6 +16,8 @@ This is ~~removed~~.
 
 This is [<_<]an important spoiler[>_>].
 
+This is a regular sentence. ((And this is an aside.))
+
 
 Link text [can contain [any] brackets -> https://altavista.com].
 
