--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Up is a set of conventions for writing plain text. I'm not accepting contributions at this time!
+Up is a set of conventions for writing documents in plain text. I'm not accepting contributions at this time!
 
 
 
@@ -19,26 +19,19 @@ This is [<_<]an important spoiler[>_>].
 This is a regular sentence. ((And this is an aside.))
 
 
-Link text [can contain [any] brackets -> https://altavista.com].
-
-Link URLs [can contain any brackets -> https://google.com/search?q=[hi]].
-
-
-Within an inline code snippet, other conventions do not apply.
-
-This `*is not emphasized*`.
+Within an inline code snippet, other conventions do not apply. This `*is not emphasized*`.
 
 
 A backslash "escapes" the following character, removing any special meaning:
 
-This is not a \[helpful link -> https://stackoverflow.com].
+This is not a \[link -> https://stackoverflow.com].
 
 This text is not \*emphasized\*.
 
-This text is not \*\*stressed\*\*.
 
-This is not some \`inline_code\`.
+Link URLs can easily contain [matching brackets -> https://google.com/search?q=[hi]].
 
+If you need to include any non-matching brackets, escape them using a backslash.
 
 
 This is a paragraph.
@@ -53,7 +46,7 @@ Alternatively, you can just use a line!
 
 -----------------------------------------------------------------------
 
-Consecutive lines represent... lines. Not a pagragraph.
+Consecutive lines represent... lines. Not a paragraph.
 
 Roses are read
 Violets are blue
@@ -89,3 +82,12 @@ This is a sixth-level heading
 #########################################
 Any heading can have an optional overline
 #########################################
+
+
+````````````
+const summary = "Code blocks are sandwiched by lines of backticks."
+
+const description = "The content and formatting of code blocks are preserved completely."
+
+const funFact = "Even backslashes are preserved.\n\nExciting!"
+````````````
