Clarify description lists in readme

--- a/README
+++ b/README
@@ -162,5 +162,5 @@ Bulbasaur
     
 Donut
 Doughnut
-  The favorite dessert of hedgehogs. A single description can have multiple terms.
+  The favorite dessert of hedgehogs. Multiple terms can be associated with a single description.
   
