Add conventions to readme

--- a/README
+++ b/README
@@ -172,3 +172,12 @@ Donut
 Doughnut
   The favorite dessert of hedgehogs. Multiple terms can be associated with a single description.
   
+
+This is a picture: [o_o: baby parrot -> http://i.imgur.com/p2DNWk3.jpg]
+
+This is some audio: [-_-: baby parrot chirping -> http://example.com/babyparrot.ogg]
+
+This is a video: [o_-: baby parrot eating -> http://example.com/babyparrot.webm]
+
+
+This is >>highlighted<<. Andrew ate a burger, some fries, >>a tropical tarantula<<, and glass of water.
