Swap video eyes in readme

--- a/README
+++ b/README
@@ -177,4 +177,4 @@ This is a picture: [o_o: baby parrot -> http://i.imgur.com/p2DNWk3.jpg]
 
 This is some audio: [-_-: baby parrot chirping -> http://example.com/babyparrot.ogg]
 
-This is a video: [o_-: baby parrot eating -> http://example.com/babyparrot.webm]
+This is a video: [-_o: baby parrot eating -> http://example.com/babyparrot.webm]
