Update project description

--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-Up is a set of conventions for writing documents in plain text. I'm not accepting contributions at this time!
+Up is a lightweight markup language for writing in plain text.
+
+I'm not accepting contributions at this time!
 
 
 
