Update readme w/ preferred spoiler capitalization

--- a/README
+++ b/README
@@ -15,7 +15,7 @@ This is ++inserted++.
 
 This is ~~removed~~.
 
-This is [spoiler: an important spoiler].
+This is [SPOILER: an important spoiler].
 
 This is an image: [image: baby parrot -> http://i.imgur.com/p2DNWk3.jpg]
 
