Add action example to readme

--- a/README
+++ b/README
@@ -7,6 +7,8 @@ This is a link to a [small search engine -> http://ddg.gg].
 
 This is *emphasized*. This is **stressed**.
 
+This is an action: {sigh}
+
 This is some `inline_code()`. 
 
 This is a regular sentence. ((And this is a footnote.))
