Remove arrow syntax from readme

--- a/README
+++ b/README
@@ -3,7 +3,9 @@ Up is a lightweight markup language for writing in plain text.
 I'm not accepting contributions at this time!
 
 
-This is a link to a [small search engine -> http://ddg.gg].
+This is a link to a [small search engine](http://ddg.gg).
+
+To produce links, you can {use}[https://en.wikipedia.org/wiki/The_Used] parentheses, curly brackets, or square brackets. 
 
 This is *emphasized*. This is **stressed**.
 
@@ -19,18 +21,18 @@ This is ~~removed~~.
 
 This is [SPOILER: an important spoiler].
 
-This is an image: [image: baby parrot -> http://i.imgur.com/p2DNWk3.jpg]
+This is an image: [image: baby parrot](http://i.imgur.com/p2DNWk3.jpg)
 
-This is some audio: [audio: baby parrot chirping -> http://example.com/babyparrot.ogg]
+This is some audio: [audio: baby parrot chirping](http://example.com/babyparrot.ogg)
 
-This is a video: [video: baby parrot eating -> http://example.com/babyparrot.webm]
+This is a video: [video: baby parrot eating](http://example.com/babyparrot.webm)
 
 
 Styles can overlap!
 
 I **love ~~drinking** whole~~ milk.
 
-I do *not [care* at -> https://en.wikipedia.org/wiki/Carrot] all.
+I do *not [care* at](https://en.wikipedia.org/wiki/Carrot) all.
 
 
 Within an inline code snippet, other conventions do not apply. This `*is not emphasized*`.
@@ -38,12 +40,12 @@ Within an inline code snippet, other conventions do not apply. This `*is not emp
 
 A backslash "escapes" the following character, removing any special meaning:
 
-This is not a [link \-> https://stackoverflow.com].
+This is not a \[link](https://stackoverflow.com).
 
 This text is not \*emphasized*.
 
 
-Link URLs can easily contain [matching brackets -> https://google.com/search?q=[hi]].
+Link URLs can easily contain [matching brackets](https://google.com/search?q=[hi]).
 
 If you need to include a non-matching bracket, escape it using a backslash.
 
